--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!-- Sets up navigation on upper right -->  
     <div id='nav'>
       <ul>
-        <li><a href='http://data.unhcr.org/portfolio/' target="_blank">Portfolio</a></li>
-        <li id='sit'><a href='#'>Information Portals</a></li>
+        <li><a href='http://data.unhcr.org/syrianrefugees/country.php?id=107' target="_blank">InfoPortal</a></li>
+        <li><a href='http://www.unhcr.jo' target="_blank">Public Information</a></li>
       </ul>
     </div>
   </div>
