--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset='utf-8' />
-  <title>UNHCR - Emergencies</title>
+  <title>Zaatari Camp</title>
   <link href='css/reset.css' rel='stylesheet' type='text/css' />
   <link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.8-dev/mapbox.css' rel='stylesheet' type='text/css' />
   <link href='css/style.css' rel='stylesheet' type='text/css' />
@@ -26,7 +26,7 @@
     <!-- Sets up navigation on upper right -->  
     <div id='nav'>
       <ul>
-        <li><a href='http://data.unhcr.org/syrianrefugees/country.php?id=107' target="_blank">InfoPortal</a></li>
+        <li><a href='http://data.unhcr.org/syrianrefugees/settlement.php?id=176&country=107&region=77' target="_blank">InfoPortal</a></li>
         <li><a href='http://www.unhcr.jo' target="_blank">Public Information</a></li>
       </ul>
     </div>
