--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   <!-- Six stories for each layer --> 
   <div id='story'>
     <div id='s1'>
-      <h2>Complex Crises</h2>
-      <p>Thousands of people everyday are facing life-threatening situations. UNHCR and Partners are currently responding to major conflicts and provided life-saving assistance to those in need.</p>
-      <p>Explore more about the current situations.</p>
+      <h2>Zaatari, now the firth Largest city in Jordan...</h2>
+      <p>Zaatari Camp was first opened on July 28, 2012 to host Syrians fleeing the violence .</p>
+      <p>This site is designed to present the camp in details.</p>
     </div>
     <div id='s2'>
       <h2>Increase in population displacement</h2>
