--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id='sections'>
     <a class='active' href='#' data-value='1 2' data-type='emergencies'>Emergencies</a>
     <a href='#' data-value='3 4 5' data-type='response'>Assistance</a>
-    <a href='#' data-value='6' data-type='information'>Information</a>
+    <a href='#' data-value='7' data-type='information'>Information</a>
   </div>
   <div id='sitnav'>
     <ul></ul>
@@ -52,25 +52,31 @@
       <p>This site is designed to present the camp in details.</p>
     </div>
     <div id='s2'>
-      <h2>Increase in population displacement</h2>
-      <p>Over the past 2 years a series of emergencies have forced more people to flee across borders than at any time in the last decade. </p>
+      <h2>Distribution of relief Items</h2>
+      <p>O </p>
     </div>
     <div id='s3'>
-      <h2>Relief Assistance Distribution</h2>
-      <p>UNHCR responds to emergencies immediately and begins delivering life-saving assistance. On the ground, UNHCR is distributing unprecedented numbers of tents, food, and other life-saving supplies.</p>
+      <h2>Water and sanitation</h2>
+      <p> </p>
     </div>
     <div id='s4'>
-      <h2>Emergency Staff Deployments</h2>
-      <p>In the midst of the response, local and international staff are deployed to the emergency regions to assist those in need.</p>
+      <h2>Health Services</h2>
+      <p>.</p>
     </div>
     <div id='s5'>
-      <h2>Finances Needed to Assist</h2>
-      <p>Support is needed to continue to provide assistance to those in need. Currently, the total need to respond effectively is unfulfilled. Underfunding continues to delay response and put lives at risk.</p>
-    <div class='fund'><a href='http://donate.unhcr.org/' target="_blank">Donate Now</a></div>
+      <h2>Education & Schools</h2>
+      <p>.</p>
     </div>
     <div id='s6'>
-      <h2>Access more Information</h2>
-      <p>Explore more about UNHCR and partners’ response to the current emergencies and other protracted refugee crises. Access the information sharing portals.</p>
+      <h2>Provision of light and electicity</h2>
+      <p>.</p>
+
+    </div>
+    <div id='s7'>
+      <h2>Humanitarian actors present in the camp</h2>
+      <p>UNHCR is working in partnership with many NGOs and sister UN agencies.</p>
+    <li data-value=6>6</li>
+      <div class='fund'><a href='http://donate.unhcr.org/syria' target="_blank">Donate Now</a></div>
     </div>
   </div>
 
@@ -81,7 +87,7 @@
     <li data-value=3>3</li>
     <li data-value=4>4</li>
     <li data-value=5>5</li>
-    <li data-value=6>6</li>
+    <li data-value=6>7</li>
   </ul>
   
   <!-- Big arrows to flip through stories --> 
