--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id='sections'>
     <a class='active' href='#' data-value='1 2' data-type='emergencies'>Emergencies</a>
     <a href='#' data-value='3 4 5' data-type='response'>Assistance</a>
-    <a href='#' data-value='7' data-type='information'>Information</a>
+    <a href='#' data-value='6' data-type='information'>Information</a>
   </div>
   <div id='sitnav'>
     <ul></ul>
@@ -67,12 +67,13 @@
       <h2>Education & Schools</h2>
       <p>.</p>
     </div>
-    <div id='s6'>
+  <!--     <div id='s6'>
       <h2>Provision of light and electicity</h2>
       <p>.</p>
 
     </div>
-    <div id='s7'>
+    -->
+    <div id='s6'>
       <h2>Humanitarian actors present in the camp</h2>
       <p>UNHCR is working in partnership with many NGOs and sister UN agencies.</p>
     <li data-value=6>6</li>
@@ -87,7 +88,7 @@
     <li data-value=3>3</li>
     <li data-value=4>4</li>
     <li data-value=5>5</li>
-    <li data-value=6>7</li>
+    <li data-value=6>6</li>
   </ul>
   
   <!-- Big arrows to flip through stories --> 
