--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
   <div id='story'>
     <div id='s1'>
       <h2>Zaatari, now the firth Largest city in Jordan...</h2>
-      <p>Zaatari Camp was first opened on July 28, 2012 to host Syrians fleeing the violence .</p>
-      <p>This site is designed to present the camp in details.</p>
+      <p>Zaatari Camp was first opened on July 28, 2012 to host Syrians fleeing the violence.</p>
+      <p>Less than a year later, the population has reached over 100,000 refugees.</p>
+      <p>Zoom in the see the camp.</p>
     </div>
     <div id='s2'>
       <h2>Distribution of relief Items</h2>
