--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<!-- Sets up header -->  
+<!-- Sets up header here -->  
   <div id='header'>
     <div class='title'>
       <!-- Sets up logo -->  
